--- a/_cases/2023/DIVD-2023-00016.md
+++ b/_cases/2023/DIVD-2023-00016.md
@@ -29,26 +29,26 @@ timeline:
   end: 2023-03-04
   event: "Started scanning for vulnerable instances"
 - start: 2023-03-16
-  end: 2023-03-16
+  end: 
   event: "First mail round sent"
 - start: 2023-03-16
-  end: 2023-03-16
+  end: 
   event: "Case file posted"
 - start: 2023-05-09
-  end: 2023-05-09
+  end: 
   event: "Second scan for vulnerable instances "
 - start: 2023-05-10
-  end: 2023-05-10
+  end: 
   event: "Second mail round"
-- start: 2022-12-10
-  end: 2023-05-25
+- start: 2023-05-25
+  end: 
   event: Case closed
 ips: 363
 ---
 
 ## Summary
 
-On Sepptember 14, 2022, a new 0-day vulnerability came out in GLPI and was posted online. GLPI is an open source IT asset management software which is widely used. The vulnerability involves a code injection in GLPI instances versions < 10.0.3 and < 9.5.9 which results in a remote code execution vulnerability, caused by an old version of the htmlawed library (under /vendor/htmlawed/htmlawed/) that still contains the htmLawedTest.php file with code injection vulnerability.
+On September 14, 2022, a new 0-day vulnerability came out in GLPI and was posted online. GLPI is an open source IT asset management software which is widely used. The vulnerability involves a code injection in GLPI instances versions < 10.0.3 and < 9.5.9 which results in a remote code execution vulnerability, caused by an old version of the htmlawed library (under /vendor/htmlawed/htmlawed/) that still contains the htmLawedTest.php file with code injection vulnerability.
 
 ## What you can do
 
