[DIVD-2022-00051] Wrap up the case file

--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -3,7 +3,7 @@ layout: case
 title: H2 Web Console - CVE-2021-42392, CVE-2022-23221
 author: Martin van Wingerden
 lead: Martin van Wingerden
-status: Open
+status: Closed
 excerpt: DIVD is researching vulnerable, accessible H2 Web Console instances
 researchers:
 - Martin van Wingerden
@@ -17,7 +17,7 @@ versions: 1.1.100-2.1.210
 recommendation: Update and do not expose the console to untrusted users.
 workaround: Do not expose the console to untrusted users.
 start: 2022-09-09
-end:
+end: 2023-01-11
 timeline:
 - start: 2022-01-04
   end:
