[DIVD-2022-00007] Wrap up the case file

--- a/_cases/2022/DIVD-2022-00007.md
+++ b/_cases/2022/DIVD-2022-00007.md
@@ -4,7 +4,7 @@ title: "Subdomain Takeovers"
 excerpt: "Subdomain Takeovers via CNAMES or A records pointing to Azure, AWS, GitHub or unregistered domains"
 author: Martin van Wingerden
 lead: Martin van Wingerden
-status : Open
+status : Closed
 researchers:
 - Martin van Wingerden
 cves: n/a
@@ -13,7 +13,7 @@ versions: n/a
 recommendation: "Cleanup unused DNS records"
 workaround: n/a
 start: 2022-02-04
-end:
+end: 2022-12-01
 timeline:
 - start: 2022-02-04
   end:
@@ -117,11 +117,13 @@ Since 2014 subdomain takeovers have been growing problem. Due to the increased a
 
 * Cleanup unused/dangling DNS records
 * First and foremost removal of the DNS records should be done in tandem with the removal of the service
-* Secondly, whenever the vendors offers any security measures against you should apply them.
+* Secondly, whenever the vendors offers any security measures against subdomain takeovers you should apply them.
 
 ## What we are doing
 
 We are scanning the internet for vulnerable subdomain, and will attempt to notify system owners via the listed abuse contacts, `info@` and `security@`.
+
+We will continue scanning for potential subdomain takeovers in the future and whenever needed start a new case to track them.
 
 ## Further details
 
