--- a/_cases/2023/DIVD-2023-00021.md
+++ b/_cases/2023/DIVD-2023-00021.md
@@ -41,6 +41,9 @@ timeline:
 - start: 2023-05-11
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2023-05-26
+  end:
+  event: "DIVD performs first mailrun."
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
