--- a/_cases/2023/DIVD-2023-00010.md
+++ b/_cases/2023/DIVD-2023-00010.md
@@ -45,7 +45,7 @@ timeline:
 
 ### Important Information
 
-During the parsing of data related to this case something went wrong and some emails have been erroneously sent out for systems that are not vulnerable to these vulnerabilities, should you have received an email stating your systems are vulnerable to this vulnerability, yet your systems are updated to at least the February 2023 Cumulative Update (Buildnrs. listed above), you can safely disregard this email. 
+During the parsing of data related to the first mailrun of this case, there was an error that caused some emails to have been erroneously sent out for systems that are not vulnerable to these vulnerabilities. If you have received an email stating that your systems are vulnerable to this vulnerability, yet your systems are updated to at least the February 2023 Cumulative Update (Buildnrs. listed above), you can safely disregard this email. 
 
 
 ## Summary
