--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -40,6 +40,9 @@ timeline:
 - start: 2022-10-25
   end:
   event: Limited Disclosure
+- starr: 
+  end: 27-05-2023
+  event: Case closed
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
