--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -40,7 +40,7 @@ timeline:
 - start: 2022-10-25
   end:
   event: Limited Disclosure
-- starr: 
+- start: 
   end: 27-05-2023
   event: Case closed
 jekyll-secinfo:
