--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -4,7 +4,7 @@ title: "Inproper input validation vulnerabilities identified within Feathers.js"
 author: Victor Pasman
 lead: Ralph Horn
 excerpt: "Inproper input validation vulnerabilities are identified in Feathers.js, these can result in SQL-injection on the system."
-status: Open
+status: Closed
 start: 2022-02-23
 end: 
 researchers:
