--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -6,7 +6,7 @@ lead: Ralph Horn
 excerpt: "Inproper input validation vulnerabilities are identified in Feathers.js, these can result in SQL-injection on the system."
 status: Closed
 start: 2022-02-23
-end: 
+end: 2023-05-27
 researchers:
 - Victor Pasman
 - Frank Breedijk
@@ -41,8 +41,8 @@ timeline:
   end:
   event: Limited Disclosure
 - start: 
-  end: 27-05-2023
-  event: Case closed
+  end: 2023-05-27
+  event: Case closed, because we were unable to fingerprint for the vulnerability.
 ips: 0
 jekyll-secinfo:
   cve:
