--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -43,7 +43,7 @@ timeline:
 - start: 
   end: 2023-05-27
   event: Case closed, because we were unable to fingerprint for the vulnerability.
-ips: 0
+ips: n/a
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
