--- a/_cases/2022/DIVD-2022-00020.md
+++ b/_cases/2022/DIVD-2022-00020.md
@@ -40,8 +40,8 @@ timeline:
 - start: 2022-10-25
   end:
   event: Limited Disclosure
-- start: 
-  end: 2023-05-27
+- start: 2023-05-27
+  end: 
   event: Case closed, because we were unable to fingerprint for the vulnerability.
 ips: n/a
 jekyll-secinfo:
