--- a/_cases/2022/DIVD-2022-00005.md
+++ b/_cases/2022/DIVD-2022-00005.md
@@ -37,6 +37,9 @@ timeline:
 - start: 2022-04-20
   end:
   event: DIVD starts second round of notifications.
+- start: 2022-04-20
+  end:
+  event: Case closed.
 ips: 12571
 ---
 ## Summary
