--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -55,7 +55,7 @@ timeline:
   end: 2023-03-03
   event: "DIVD rescans and notifies owners/operators of EOL devices that are still found to be operational"
 - start: 2023-05-25
-  end:
+  end: 2023-05-31
   event: "DIVD rescans and notifies owners/operators of EOL devices that are still found to be operational"
 #ips: 500
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
@@ -75,7 +75,7 @@ If you came here through other means than through our direct mailing, please ref
 
 After having notified all owners/operators of relevant EOL Zyxel devices, we will intermittently scan the internet, to determine if appropriate action has been taken, and renotify if we have not received a reply from a devices respective owner/operator.
 
-At the first scan, we found 500 vulnerable IP addresses. A month later, a second scan showed 413 vulnerable IPs.
+At the first scan, we found 500 vulnerable IP addresses. A month later, a second scan showed 413 vulnerable IPs. Our most current scan shows 111 vulnerable IPs.
 
 ## More information
 
