--- a/_cases/2022/DIVD-2022-00063.md
+++ b/_cases/2022/DIVD-2022-00063.md
@@ -3,7 +3,7 @@ layout: case
 title: Memory overflow vulnerability in FortiOS SSL VPN
 author: Ralph Horn
 lead: Ralph Horn
-status: Open
+status: Closed
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-42475
 researchers:
   - Axel Boesenach
@@ -30,7 +30,7 @@ versions:
 recommendation: "Upgrade your affected installations to one of the fixed versions listed by Fortinet in their Security Advisory."
 workaround: "Disable SSL VPN"
 start: 2022-12-12
-end:
+end: 2023-05-31
 timeline:
   - start: 2022-11-01
     end:
@@ -66,6 +66,9 @@ timeline:
     event: "DIVD is contacted about false positives by multiple parties"
   - start: 2023-03-27
     event: "DIVD triages the issue regarding the false positives and sends rectification e-mails"
+  - start: 2023-05-21
+    event: "Case closed."
+ips: 492
 ---
 
 ## Summary
