--- a/_cases/2022/DIVD-2022-00045.md
+++ b/_cases/2022/DIVD-2022-00045.md
@@ -3,10 +3,10 @@ layout: case
 title: "Injection vulnerability found within Socket.io"
 author: Victor Pasman
 lead: Ralph Horn
-status: Open
+status: Closed
 start: 2022-04-29
-end: 
-ips: 0
+end: 2023-02-22
+ips: N/A
 excerpt: A injection vulnerability was identified in Socket.io which can result in Remote Code Execution (RCE)
 researchers:
 - Victor Pasman
@@ -33,6 +33,8 @@ timeline:
 - start: 2022-10-25
   end:
   event: Limited Disclosure
+- start: 2023-02-22
+  event: Case closed.
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
