--- a/_cases/2022/DIVD-2022-00032.md
+++ b/_cases/2022/DIVD-2022-00032.md
@@ -16,9 +16,9 @@ product:
 recommendation: Verify if the backdoor is installed on your Exchange Server.
 # patch_status: Patch available
 # workaround:  
-status: Open
+status: Closed
 start: 2022-06-03
-end:
+end: 2022-11-22
 timeline:
 - start: 2022-06-02
   end:
@@ -38,8 +38,10 @@ timeline:
 - start: 2022-09-18
   end:
   event: "Third round of notifications sent"
+- start: 2022-11-22
+  event: "Case closed."
 
-ips: 0
+ips: 329
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
