--- a/_cases/2022/DIVD-2022-00045.md
+++ b/_cases/2022/DIVD-2022-00045.md
@@ -6,7 +6,7 @@ lead: Ralph Horn
 status: Closed
 start: 2022-04-29
 end: 2023-02-22
-ips: N/A
+ips: n/a
 excerpt: A injection vulnerability was identified in Socket.io which can result in Remote Code Execution (RCE)
 researchers:
 - Victor Pasman
