--- a/_cases/2023/DIVD-2023-00023.md
+++ b/_cases/2023/DIVD-2023-00023.md
@@ -61,6 +61,7 @@ DIVD is currently working to identify vulnerable parties and notifying these. We
 ## More information
 
 * {% cve CVE-2023-34362 %}
+* [NCSC Advisory](https://www.ncsc.nl/actueel/advisory?id=NCSC%2D2023%2D0268)
 * [BleepingComputer Article](https://www.bleepingcomputer.com/news/security/new-moveit-transfer-zero-day-mass-exploited-in-data-theft-attacks/amp/)
 * [Progress Advisory](https://community.progress.com/s/article/MOVEit-Transfer-Critical-Vulnerability-31May2023)
 * [CISA KEV](https://www.cisa.gov/known-exploited-vulnerabilities-catalog)
