--- a/_cases/2023/DIVD-2023-00024.md
+++ b/_cases/2023/DIVD-2023-00024.md
@@ -17,7 +17,7 @@ versions:
 - "< 2.22.2)"
 
 
-recommendation: "Install patches"
+recommendation: "Install patches."
 start: 2023-06-07
 end: 
 timeline:
