--- a/_cases/2023/DIVD-2023-00024.md
+++ b/_cases/2023/DIVD-2023-00024.md
@@ -8,14 +8,13 @@ excerpt: "GeoServer has a critical SQL injection vulnerability."
 researchers:
 - Max van der Horst
 - Jeroen van de Weerd
-- hp197
+- Henry Schokkenbroek
 cves:
 - CVE-2023-25157
 product: GeoServer
 versions: 
 - "< 2.21.4"
-- "< 2.22.2)"
-
+- "< 2.22.2"
 
 recommendation: "Install patches."
 start: 2023-06-07
@@ -41,7 +40,7 @@ GeoServer located a vulnerability in the GeoTools Library that allows SQL Inject
 
 ## What you can do
 
-GeoServer has listed 3 mitigations and a remediation step. If you can, install the provided patch immediately. 
+GeoServer advises to install the patch by upgrading to version 2.23.0. If this is not possible, there are a few mitigations available which include disabling the PostGIS Datastore encode functions to mitigate the vulnerabilities in the `strStartsWith` and `strEndsWith` parameters and enabling the PostGIS DataStore preparedStatements functionality to mitigate the `FeatureId` vulnerability. Note that these mitigations are known to cause significant slowdowns.
 
 ## What we are doing
 
