update for new zeroday in MOVEit

--- a/_cases/2023/DIVD-2023-00023.md
+++ b/_cases/2023/DIVD-2023-00023.md
@@ -42,6 +42,9 @@ timeline:
 - start: 2023-06-03
   end:
   event: "First version of this casefile."
+- start: 2023-06-15
+  end:
+  event: "New zero day vulnerability found and published online"
 ---
 
 ## Summary
@@ -63,5 +66,5 @@ DIVD is currently working to identify vulnerable parties and notifying these. We
 * {% cve CVE-2023-34362 %}
 * [NCSC Advisory](https://www.ncsc.nl/actueel/advisory?id=NCSC%2D2023%2D0268)
 * [BleepingComputer Article](https://www.bleepingcomputer.com/news/security/new-moveit-transfer-zero-day-mass-exploited-in-data-theft-attacks/amp/)
-* [Progress Advisory](https://community.progress.com/s/article/MOVEit-Transfer-Critical-Vulnerability-31May2023)
+* [Progress Advisory](https://community.progress.com/s/article/MOVEit-Transfer-Critical-Vulnerability-15June2023)
 * [CISA KEV](https://www.cisa.gov/known-exploited-vulnerabilities-catalog)
