--- a/_cases/2022/DIVD-2022-00017.md
+++ b/_cases/2022/DIVD-2022-00017.md
@@ -21,7 +21,7 @@ timeline:
 - start: 2022-03-10
   end: 2023-03-01
   event:  DIVD started scraping for healthcare services globally.]
-Ips: 19
+ips: 19
 
 
 
