--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -1,18 +1,19 @@
 ---
 layout: case
-title: "Apache Superset authentication bypass leads to RCE"
+title: "Apache Superset authentication bypass leads to RCE - CVE-2023-27524"
 author: Finn van der Knaap
 lead: Finn van der Knaap
 status: Open
 excerpt: "Apache Superset, up to and including 2.0.1 vulnerable to bypass that can lead to an RCE."
 researchers:
 - Finn van der Knaap
+- Ralph Horn
 cves:
 - CVE-2023-27524
 product: Apache Superset
 versions: 
 - <=2.0.1
-recommendation: "Update to the latest version or rotate the SECRET_KEY"
+recommendation: "Rotate the SECRET_KEY and update to the latest version"
 workaround: "Rotate the SECRET_KEY by following this article from Apache: [Configuring the SECRET_KEY"](https://superset.apache.org/docs/installation/configuring-superset)”
 start: 2023-07-02
 end: -
@@ -20,33 +21,30 @@ timeline:
 - start: 2023-07-02
   end: ongoing
   event: "Started research"
+- start: 2023-07-02
+  end: 2023-07-02
+  event: "publishing casefile"
 
 ---
 
 ## Summary
 
-Recently, a writeup was posted for the open source tool, Apache Superset. This is an exploration and visualization tool. The vulnerability lies with SECRET_KEY that signs the cookies of user logging in. By default, this key is one of 5 standard keys, which as written in the documentation needs to be changed by a randomly generated value. But since no one reads the documentation anymore, not a lot of people change this value. This key is very important since it signs the cookies, and when an attacker knows this key, they can sign their own cookies. With the results that an attacker can forge his own (non privileged) cookies to log in as an administrator. 
-
-
-
-
+Recently, a writeup was posted for a vulnerability, tracked as CVE-2023-27524, in the open source tool Apache Superset. A default Flask SECRET_KEY is used, this key signs the cookies of user logging in. By default, this key is one of 5 standard keys, which per the software's documentation should be changed. When an attacker knows this key, they can sign their own cookies, as a result the attacker can forge their own cookies to log in as an administrator.
 
 
 
 ## What you can do
 
-* Consider upgrading to the latest version.
-* Rotate the SECRET_KEY by following the article on Apache on their website: https://superset.apache.org/docs/installation/configuring-superset .
+* Rotate the SECRET_KEY by following the article on Apache on their website: https://superset.apache.org/docs/installation/configuring-superset. And update to the latest version
 
 ## What we are doing
 
-* DIVD is currently pinpointing all the vulnerable Superset servers.
+* DIVD is currently identifying all the vulnerable Superset servers.
 
-{% include timeline.html %}
-{% include{% include timeline.html %} timeline.html %}
 
 ## More information
 
-*[Configuring the SECRET_KEY"](https://superset.apache.org/docs/installation/configuring-superset)
+* [Configuring the SECRET_KEY"](https://superset.apache.org/docs/installation/configuring-superset)
 * [Horizon3 writeup"](https://www.horizon3.ai/cve-2023-27524-insecure-default-configuration-in-apache-superset-leads-to-remote-code-execution/)
 * [NIST "CVE-2023-27524 Detail"](https://nvd.nist.gov/vuln/detail/CVE-2023-27524)
+![image](https://github.com/E1A/web-csirt/assets/57531297/fb2cb5bc-9289-4a71-b67e-fa28207fef8b)
