--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -41,6 +41,7 @@ Recently, a writeup was posted for a vulnerability, tracked as CVE-2023-27524, i
 
 * DIVD is currently identifying all the vulnerable Superset servers.
 
+{% include timeline.html %}
 
 ## More information
 
