--- a/_cases/2021/DIVD-2021-00014.md
+++ b/_cases/2021/DIVD-2021-00014.md
@@ -3,31 +3,34 @@ layout: case
 title: DIVD-2021-00014 - Kaseya Unitrends
 divd: DIVD-2021-00014
 short: DIVD recommends not exposing the on-premise Kaseya Unitrends servers to the internet
-author: Victor Gevers
-lead: Victor Gevers
+author: Victor Gevers and Frank Breedijk
+lead: Frank Breedijk
 redirect_from:
   - /DIVD-2021-00014/
-status : Open
+status : Closed
 excerpt: Users of on-premise Kaseya Unitrends are advised to not expose this service directly to the internet
 researchers:
 - Wietse Boonstra
 - Victor Gevers
 - Frank Breedijk
-cves: n/a
+cves: 
+- CVE-2021-40385
+- CVE-2021-40386
+- CVE-2021-40387
 product: Kaseya Unitrends
 versions: 
   - Server < 10.5.5-2
-  - Client, currently unpatched all versions likely vulnerable 
+  - Client < 10.6.2
 recommendation: "
-Do not expose this service or the clients directly to the internet until Kaseya has patched these vulnerabilities.
+Patch the client and serve components to the latest version. We recommand not tp this service or the clients directly to the internetbut use additional access measures in front of it.
 "
-patch_status:	 	"Server side vulnerabilities patched in v10.5.5-2, no patches available for the client"
+patch_status:	 	"Patches available"
 workaround:		Workaround available for the client, in Kaseya knowledge base
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
 start: 2021-07-02
-end:
+end:   2023-07-05
 timeline:
 - start: 2021-07-02
   end: 
@@ -36,24 +39,35 @@ timeline:
   end:
   event: Vendor informed.
 - start: 2021-07-03
-  end:   2021-08-12
-  event: Vendor works on server patch
-- start: 2021-07-03
-  end:   open
-  event: Vendor works on client patch
+  end: 2021-07-04
+  event: Time to acknowledge security issue
 - start: 2021-07-14
   end:
   event: Scanning internet-facing implementations.
 - start: 2021-07-15
   end:
   event: Start of the identification of possible vulnerable internet-facing systems.
+- start: 2021-07-03
+  end: 2021-08-12
+  event: Time to fix server side vulnerabilities
 - start: 2021-08-12
   end:
-  event: Patches relesed for the Unitrends server (v10.5.5-2) that address these vulnerabilities
+  event: Patches relesed for the Unitrends server (v10.5.5-2) that address CVE-2021-40385 and CVE-2021-40387
+- start: 2021-09-01
+  end:
+  event: CVE records published by Mitre
 - start: 2021-09-06
   end:
   event: Added official CVE numbers to this case and site
-ips: 0
+- start: 2021-07-04
+  end: 2022-04-06
+  event: Time to fix client side vulnerabilities
+- start: 2022-04-06
+  end:   
+  event: Patches relesed for the Unitrends server (v10.6.2) that (silently) address CVE-2021-40386
+- start: 2023-07-05
+  event: Case closed
+ips: 249
 ---
 
 ## Summary
@@ -63,17 +77,17 @@ Server software prior to v10.5.5-2 is vulnerable to:
 * {% cve CVE-2021-40385 %}, a privilege escaltion vulnerability from read-only user to admin, and
 * {% cve CVE-2021-40387 %}, an authenticated remote code execution vulnerability
 
-Client software (any version) is currently vulnerable to: 
-* {% cve CVE-2021-40386 %}, a (yet) upatched and undisclosed vulnerability on the client
+Client software prior to v10.6.2 is vulnerable to: 
+* {% cve CVE-2021-40386 %}, a remote code execution
 
 
 ## What you can do
 Patch server software to at least version 10.5.5-2 to remove these vulnerabilities. As per Kaseya's [firewall requirements](https://support.unitrends.com/hc/en-us/articles/360013264518) you are strongly advised not to expose this product to public internet.
 
-The client side vulnerability can current only be mitigated with firewall rules. Filter traffic to and from the client using the recommened mitigation from the [knowledge base article](https://support.unitrends.com/hc/en-us/articles/4404684084369-RCE-KB). 
+patch clients softwate to at least version 10.6.2. The client side vulnerability can also be mitigated with firewall rules. Filter traffic to and from the client using the recommened mitigation from the [knowledge base article](https://support.unitrends.com/hc/en-us/articles/4404684084369-RCE-KB). 
  
-## What we are doing
-The Dutch Institute for Vulnerability Disclosure (DIVD) performs a daily scan to detect vulnerable Kaseya Unitrends servers and notify the owners directly or via the known abuse channels, Gov-CERTs and CSIRTs, and other trusted channels.
+## What we were doing
+The Dutch Institute for Vulnerability Disclosure (DIVD) performed a scan to detect vulnerable Kaseya Unitrends servers and notify the owners directly or via the known abuse channels, Gov-CERTs and CSIRTs, and other trusted channels.
 
 
 {% include timeline.html %}
