--- a/_cases/2021/DIVD-2021-00014.md
+++ b/_cases/2021/DIVD-2021-00014.md
@@ -22,8 +22,7 @@ versions:
   - Server < 10.5.5-2
   - Client < 10.6.2
 recommendation: "
-Patch the client and serve components to the latest version. We recommand not tp this service or the clients directly to the internetbut use additional access measures in front of it.
-"
+Patch the client and serve components to the latest version. We recommend not to expose this service or the clients directly to the internet but to use additional access control measures in front of it."
 patch_status:	 	"Patches available"
 workaround:		Workaround available for the client, in Kaseya knowledge base
 jekyll-secinfo:
@@ -52,7 +51,7 @@ timeline:
   event: Time to fix server side vulnerabilities
 - start: 2021-08-12
   end:
-  event: Patches relesed for the Unitrends server (v10.5.5-2) that address CVE-2021-40385 and CVE-2021-40387
+  event: Patches released for the Unitrends server (v10.5.5-2) that address CVE-2021-40385 and CVE-2021-40387
 - start: 2021-09-01
   end:
   event: CVE records published by Mitre
@@ -64,7 +63,7 @@ timeline:
   event: Time to fix client side vulnerabilities
 - start: 2022-04-06
   end:   
-  event: Patches relesed for the Unitrends server (v10.6.2) that (silently) address CVE-2021-40386
+  event: Patches released for the Unitrends client (v10.6.2) that (silently) address CVE-2021-40386
 - start: 2023-07-05
   event: Case closed
 ips: 249
@@ -84,7 +83,7 @@ Client software prior to v10.6.2 is vulnerable to:
 ## What you can do
 Patch server software to at least version 10.5.5-2 to remove these vulnerabilities. As per Kaseya's [firewall requirements](https://support.unitrends.com/hc/en-us/articles/360013264518) you are strongly advised not to expose this product to public internet.
 
-patch clients softwate to at least version 10.6.2. The client side vulnerability can also be mitigated with firewall rules. Filter traffic to and from the client using the recommened mitigation from the [knowledge base article](https://support.unitrends.com/hc/en-us/articles/4404684084369-RCE-KB). 
+patch clients softwate to at least version 10.6.2. The client side vulnerability can also be mitigated with firewall rules. Filter traffic to and from the client using the recommended mitigation from the [knowledge base article](https://support.unitrends.com/hc/en-us/articles/4404684084369-RCE-KB). 
  
 ## What we were doing
 The Dutch Institute for Vulnerability Disclosure (DIVD) performed a scan to detect vulnerable Kaseya Unitrends servers and notify the owners directly or via the known abuse channels, Gov-CERTs and CSIRTs, and other trusted channels.
