--- a/_cases/2021/DIVD-2021-00014.md
+++ b/_cases/2021/DIVD-2021-00014.md
@@ -22,7 +22,7 @@ versions:
   - Server < 10.5.5-2
   - Client < 10.6.2
 recommendation: "
-Patch the client and serve components to the latest version. We recommend not to expose this service or the clients directly to the internet but to use additional access control measures in front of it."
+Patch the client and server components to the latest version. We recommend not to expose this service or the clients directly to the internet but to use additional access control measures in front of it."
 patch_status:	 	"Patches available"
 workaround:		Workaround available for the client, in Kaseya knowledge base
 jekyll-secinfo:
