--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -14,7 +14,7 @@ product: Apache Superset
 versions: 
 - <=2.0.1
 recommendation: "Rotate the SECRET_KEY and update to the latest version"
-workaround: "Rotate the SECRET_KEY by following this article from Apache: [Configuring the SECRET_KEY"](https://superset.apache.org/docs/installation/configuring-superset)”
+workaround: "Rotate the SECRET_KEY by following this article from Apache: [Configuring the SECRET_KEY](https://superset.apache.org/docs/installation/configuring-superset)"
 start: 2023-07-02
 end: 
 timeline:
