--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -19,7 +19,7 @@ start: 2023-07-02
 end: 
 timeline:
 - start: 2023-07-02
-  end: ongoing
+  end: 
   event: "Started research"
 - start: 2023-07-02
   end: 2023-07-02
