--- a/_cases/2023/DIVD-2023-00010.md
+++ b/_cases/2023/DIVD-2023-00010.md
@@ -43,7 +43,7 @@ timeline:
   event: "DIVD Rescanned for the Vulnerability"
 - start: 2024-05-18
   end:
-  event: "DIVD Did the First Mailrun
+  event: "DIVD Did the First Mailrun"
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
