--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -29,7 +29,7 @@ timeline:
 
 ## Summary
 
-Recently, a writeup was posted for a vulnerability, tracked as CVE-2023-27524, in the open source tool Apache Superset. A default Flask SECRET_KEY is used, this key signs the cookies of user logging in. By default, this key is one of 5 standard keys, which per the software's documentation should be changed. When an attacker knows this key, they can sign their own cookies, as a result the attacker can forge their own cookies to log in as an administrator.
+Recently, a writeup was posted for a vulnerability, tracked as {% cve: CVE-2023-27524 %}, in the open source tool Apache Superset. A default Flask SECRET_KEY is used, this key signs the cookies of user logging in. By default, this key is one of 5 standard keys, which per the software's documentation should be changed. When an attacker knows this key, they can sign their own cookies, as a result the attacker can forge their own cookies to log in as an administrator.
 
 
 
