--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -45,7 +45,7 @@ Recently, a writeup was posted for a vulnerability, tracked as {% cve: CVE-2023-
 
 ## More information
 
-* [Configuring the SECRET_KEY"](https://superset.apache.org/docs/installation/configuring-superset)
+* [Configuring the SECRET_KEY](https://superset.apache.org/docs/installation/configuring-superset)
 * [Horizon3 writeup"](https://www.horizon3.ai/cve-2023-27524-insecure-default-configuration-in-apache-superset-leads-to-remote-code-execution/)
 * [NIST "CVE-2023-27524 Detail"](https://nvd.nist.gov/vuln/detail/CVE-2023-27524)
 ![image](https://github.com/E1A/web-csirt/assets/57531297/fb2cb5bc-9289-4a71-b67e-fa28207fef8b)
