Fixing buidl errors

--- a/_cases/2021/DIVD-2021-00020.md
+++ b/_cases/2021/DIVD-2021-00020.md
@@ -1,11 +1,12 @@
 ---
 layout: case
-title: "DIVD-2021-00020 - Multiple Injection Vulnerabilities and Privilege Escalation in OSNEXUS QuantaStor"
+title: "DIVD-2021-00020 - OSNexsus QuantaStor limited disclosure and product warning"
 divd: DIVD-2021-00020
 excerpt: "There are multiple discovered vulnerabilities inside OSNEXUS QuantaStor involving injection (SSRF, XSS, RCE) and privilege escalation."
 author: Max van der Horst and Frank Breedijk
 lead: Frank Breedijk
 status: Open
+start: 2021-08-10
 researchers:
 - Wietse Boonstra
 - Victor Pasman
