--- a/_cases/2021/DIVD-2021-00020.md
+++ b/_cases/2021/DIVD-2021-00020.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "DIVD-2021-00020 - OSNexsus QuantaStor limited disclosure and product warning"
+title: "OSNexsus QuantaStor limited disclosure and product warning"
 divd: DIVD-2021-00020
 excerpt: "There are multiple discovered vulnerabilities inside OSNEXUS QuantaStor involving injection (SSRF, XSS, RCE) and privilege escalation."
 author: Max van der Horst and Frank Breedijk
