Thanks for the review @Lennaert89

--- a/_cases/2021/DIVD-2021-00020.md
+++ b/_cases/2021/DIVD-2021-00020.md
@@ -2,7 +2,7 @@
 layout: case
 title: "OSNexsus QuantaStor limited disclosure and product warning"
 divd: DIVD-2021-00020
-excerpt: "There are multiple discovered vulnerabilities inside OSNEXUS QuantaStor involving injection (SSRF, XSS, RCE) and privilege escalation."
+excerpt: "Several serious vulnerabilities were discovered in OSNEXUS QuantaStor. We had difficulties working with the vendor and are now disclosing vulnerabilities and issueing a product warning."
 author: Max van der Horst and Frank Breedijk
 lead: Frank Breedijk
 status: Open
@@ -22,13 +22,13 @@ cves:
 - CVE-2021-42083
 - CVE-2021-4406
 product: "OSNEXUS QuantaStor"
-versions: "before v5.10.0.156"
+versions: "before v6.0.0.355"
 recommendation: "Update to the latest version of OSNEXUS QuantaStor as soon as possible."
 patch_status: Unknown
 timeline:
 - start: 2021-08-10
   end:
-  event: Wietse Boonstra discovers five vulnerabilities.
+  event: Wietse Boonstra discovers six vulnerabilities.
 - start: 2021-10-07
   end:
   event: Five CVEs have been requested as assigned.
@@ -59,18 +59,13 @@ timeline:
   event: OSNexus release version v6.0.0.355
 - start: 2022-11-22 
   event: DIVD confirms that release is still vulnerable to all CVEs but XSS cves CVE-2021-42080 and CVE-2021-42083
-- start: 2022-12-01
-  event: New vulnerabilities discovered (CVE-2021-4406)
-- start: 2022-12-01
-  end  : open
-  event: Time to fix CVE-2021-4406
 - start : 2023-07-07
   event: Given the lack of reaction DIVD decides to publish this case file
 ---
 
 ## Summary
 
-DIVD researcher Wietse Boonstra discovered a total of six vulnerabilities in OSNEXUS QuantaStor. These vulnerabilities included a Server-Side Request Forgery, Remote Command Execution, Privilege Escalation and two Cross-Site Scripting vulnerabilities. Use of these vulnerabilities could lead to the compromise of your server.
+DIVD researcher Wietse Boonstra discovered a total of six vulnerabilities in OSNEXUS QuantaStor. These vulnerabilities included a Server-Side Request Forgery, Remote Command Execution, Privilege Escalation and two Cross-Site Scripting vulnerabilities. Abuse of these vulnerabilities could lead to the compromise of your server.
 
 ## Impact
 
@@ -83,7 +78,7 @@ By leveraging these vulnerabilities, an attacker could execute code on the webpa
 
 ## What we are doing
 We have published this case file as a product warning given the lack of (visible) vendor cooperation.
-Based on our [CNA guidelines](/cna) we have given OSNexus aple time to acknowledge our findings (388 days) and ample time to fix the vulnerabilities (at least 6 months). And it is now time for a limited disclosure. 
+Based on our [CNA guidelines](/cna) we have given OSNexus ample time to acknowledge our findings (388 days) and ample time to fix the vulnerabilities (at least 6 months). And it is now time for a limited disclosure. 
 
 
 {% include timeline.html %}
