--- a/_cases/2022/DIVD-2022-00030.md
+++ b/_cases/2022/DIVD-2022-00030.md
@@ -16,7 +16,7 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 patch_status: Available
 -workaround:
 start: 2022-05-23
-end:
+end: 2022-06-10
 timeline:
 - start: 2022-05-23
   end:
@@ -37,6 +37,7 @@ timeline:
   end:
   event: Data concerning the Netherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt) again
 
+ips: 13540
 ---
 
 
