--- a/_cases/2022/DIVD-2022-00030.md
+++ b/_cases/2022/DIVD-2022-00030.md
@@ -5,7 +5,7 @@ divd: DIVD-2022-00030
 excerpt: "QNAP urges users to immediately patch NAS devices after several were recently compromised and infected with malicious software. DIVD is actively notifying owners of vulnerable systems"
 author: Ralph Horn
 lead: Ralph Horn
-status: Open
+status: Closed
 researchers:
 - Pepijn van der Stap
 - Lennaert Oudshoorn
