--- a/_cases/2022/DIVD-2022-00056.md
+++ b/_cases/2022/DIVD-2022-00056.md
@@ -3,7 +3,7 @@ layout: case
 title: Critical authentication bypass affecting Fortigate products
 author: Tom Wolters
 lead: Ralph Horn and Victor Pasman
-status: Open
+status: Closed
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-40684
 researchers:
 - Tom Wolters
@@ -17,7 +17,7 @@ versions: FortiOS, 7.0.0 to 7.0.6 and 7.2.0-7.2.1. FortiProxy, 7.0.0 to 7.0.6 an
 recommendation: "Upgrade to FortiOS 7.0.7 or 7.2.2 or above, update FortiProxy 7.0.7 or 7.2.1 or above."
 workaround: "If updating is not possible, disable the internet facing administration functionality."
 start: 2022-10-07
-end:
+end: 2023-04-05
 timeline:
 - start: 2022-10-07
   end:
@@ -35,6 +35,7 @@ timeline:
   end:
   event: "DIVD sends out first rounds of notifications"
 
+ips: 16521
 ---
 
 ## Summary
