--- a/_cases/2023/DIVD-2023-00020.md
+++ b/_cases/2023/DIVD-2023-00020.md
@@ -3,7 +3,7 @@ layout: case
 title: "PaperCut MF/NG Authentication Bypass"
 author: Max van der Horst
 lead: Ralph Horn
-status: Open
+status: Closed
 excerpt: "This vulnerability allows remote attackers to bypass authentication on affected installations of PaperCut MF/NG 22.0.5 (Build 63914)."
 researchers:
 - Axel Boesenach
@@ -16,7 +16,7 @@ product: "PaperCut NG and PaperCut MF"
 versions: "22.0.5 (Build 63914)"
 recommendation: "Upgrade your PaperCut MF/NG version to one of the listed fixed versions."
 start: 2023-04-20
-end:
+end: 2023-05-10
 timeline:
 - start: 2023-04-20
   end:
@@ -34,6 +34,7 @@ timeline:
   end:
   event: "Bypass for patch found by VulnCheck, DIVD starts investigation on new fingerprint."
 
+ips: 708
 ---
 
 ## Summary
