--- a/_cases/2021/DIVD-2021-00020.md
+++ b/_cases/2021/DIVD-2021-00020.md
@@ -2,7 +2,7 @@
 layout: case
 title: "OSNexsus QuantaStor limited disclosure and product warning"
 divd: DIVD-2021-00020
-excerpt: "Several serious vulnerabilities were discovered in OSNEXUS QuantaStor. We had difficulties working with the vendor and are now disclosing vulnerabilities and issueing a product warning."
+excerpt: "Several serious vulnerabilities were discovered in OSNEXUS QuantaStor. We had difficulties working with the vendor and are now disclosing vulnerabilities and issuing a product warning."
 author: Max van der Horst and Frank Breedijk
 lead: Frank Breedijk
 status: Open
@@ -31,10 +31,10 @@ timeline:
   event: Wietse Boonstra discovers six vulnerabilities.
 - start: 2021-10-07
   end:
-  event: Five CVEs have been requested as assigned.
+  event: Five CVEs have been requested and assigned.
 - start: 2021-10-20
   end:   2022-11-12
-  event: Time to acknowledge receipt of vulnerabilities
+  event: Time to acknowledge receipt of vulnerabilities.
 - start: 2021-10-20
   event: Disclosure process with OSNEXUS started.
 - start: 2021-12-28
@@ -42,25 +42,27 @@ timeline:
 - start: 2022-10-14
   event: Cooperation with NCSC-NL started.
 - start: 2022-10-28
-  event: NCSC-NL again reaches out to OSNexus
+  event: NCSC-NL again reaches out to OSNexus.
 - start: 2022-11-10
-  event: NCSC-NL  reaches out to OSNexus via US partners
+  event: NCSC-NL  reaches out to OSNexus via US partners.
 - start: 2022-11-12
-  event: OSNexus acknowledges receipt of report
+  event: OSNexus acknowledges receipt of report.
 - start: 2022-11-12
   end  : open
-  event: Time to fix CVE-2021-42080 and CVE-2021-42083
+  event: Time to fix CVE-2021-42080 and CVE-2021-42083.
 - start: 2022-11-12
   end  : 2022-11-22
-  event: Time to fix other CVEs
+  event: Time to fix other CVEs.
 - start: 2022-11-15
-  event: OSNexus promises a new release with 7 days that should fix vulnberabilities
+  event: OSNexus promises a new release with 7 days that should fix vulnberabilities.
 - start: 2022-11-22
-  event: OSNexus release version v6.0.0.355
+  event: OSNexus release version v6.0.0.355.
 - start: 2022-11-22 
-  event: DIVD confirms that release is still vulnerable to all CVEs but XSS cves CVE-2021-42080 and CVE-2021-42083
+  event: DIVD confirms that release is still vulnerable to all CVEs but XSS cves CVE-2021-42080 and CVE-2021-42083.
+- start : 2023-07-05
+  event: CVE-2021-4406 assigned.
 - start : 2023-07-09
-  event: Given the lack of reaction DIVD decides to publish this case file
+  event: Given the lack of reaction DIVD decides to publish this case file.
 ---
 
 ## Summary
