--- a/_cases/2023/DIVD-2023-00027.md
+++ b/_cases/2023/DIVD-2023-00027.md
@@ -43,7 +43,7 @@ On the may 23th Ignite Realtime released a patch for CVE-2023-32315, which is an
 
 * Update your system to the latest version
 * Follow the direction of the vendor adressing this issue at 
-  (https://github.com/igniterealtime/Openfire/security/advisories/GHSA-gw42-f939-fhvm)
+  [Openfire security advisory GHSA-gw42-f939](https://github.com/igniterealtime/Openfire/security/advisories/GHSA-gw42-f939-fhvm)
 
 ## What we are doing
 
