--- a/_cases/2023/DIVD-2023-00027.md
+++ b/_cases/2023/DIVD-2023-00027.md
@@ -37,7 +37,7 @@ timeline:
 ---
 
 ## Summary
-On the may 23th Ignite Realtime released a patch for CVE-2023-32315, which is an authentication bypass throught a path traversal vulnerability in Ingnite realtime Openfire software. DIVD will scan and notify systems that haven’t installed the patch and are vulnerable for this CVE.
+On the may 23th Ignite Realtime released a patch for {% cve CVE-2023-32315 %}, which is an authentication bypass through a path traversal vulnerability in Ingnite realtime Openfire software. DIVD will scan and notify systems that haven’t installed the patch and are vulnerable for this CVE.
 
 ## What you can do
 
