--- a/_cases/2023/DIVD-2023-00027.md
+++ b/_cases/2023/DIVD-2023-00027.md
@@ -42,7 +42,7 @@ On the may 23th Ignite Realtime released a patch for {% cve CVE-2023-32315 %}, w
 ## What you can do
 
 * Update your system to the latest version
-* Follow the direction of the vendor adressing this issue at 
+* Follow the direction of the vendor addressing this issue at 
   [Openfire security advisory GHSA-gw42-f939](https://github.com/igniterealtime/Openfire/security/advisories/GHSA-gw42-f939-fhvm)
 
 ## What we are doing
