--- a/_cases/2023/DIVD-2023-00027.md
+++ b/_cases/2023/DIVD-2023-00027.md
@@ -1,7 +1,8 @@
 ---
 layout: case
 title: "Ignite Realtime Openfire auth bypass - CVE-2023-32315"
-author: Hans Meuris
+author: Hans Meuris 
+Co-authored-by: Frank Breedijk <frank@breedijk.net>
 lead: Hans Meuris
 status: Open
 excerpt: "Ignite Realtime Openfire version 3.10.0 through 4.6.8 (excluded) and 4.7.0 to 4.7.5 (excluded) are vulnerable to a Path traversal vulnerability"
