--- a/_cases/2023/DIVD-2023-00027.md
+++ b/_cases/2023/DIVD-2023-00027.md
@@ -16,7 +16,7 @@ product: Ignite Realtime Openfire
 versions: 
 - 3.10.0 <= 4.6.7 and 4.7.0 <= 4.7.4
 recommendation: "Update your system to the latest version"
-workaround: See vendor writeup:(https://github.com/igniterealtime/Openfire/security/advisories/GHSA-gw42-f939-fhvmA)
+workaround: See vendor writeup: https://github.com/igniterealtime/Openfire/security/advisories/GHSA-gw42-f939-fhvmA
 start: 2023-06-23
 end: 
 timeline:
