--- a/_cases/2023/DIVD-2023-00028.md
+++ b/_cases/2023/DIVD-2023-00028.md
@@ -21,7 +21,7 @@ versions:
 - < 2022.1.8 (14.1.8)
 - < 2023.0.4 (15.0.4)
 recommendation: Update to the applicable version of MOVEit Transfer listed in the versions section.
-patch_status: Full patched
+patch_status: Fully patched
 status : Open
 start: 2023-07-06
 end: 
