incorporate feedback from @Lennaert89

--- a/_cases/2023/DIVD-2023-00029.md
+++ b/_cases/2023/DIVD-2023-00029.md
@@ -14,7 +14,7 @@ researchers:
 - Boaz Braaksma
 - Ralph Horn
 cves:
-- CVE-2023-24489
+- CVE-2023-27997
 product: "FortiOS-6K7K, FortiProxy, and FortiOS"
 versions:
 - FortiOS-6K7K version 7.0.10
@@ -40,7 +40,7 @@ versions:
 - FortiOS version 6.2.0 through 6.2.13
 - FortiOS version 6.0.0 through 6.0.16
 recommendation: "Upgrade your affected installations to one of the fixed versions listed by Fortinet in their Security Advisory."
-patch_status: Full patched
+patch_status: Fuly patched
 -workaround: Disable SSL VPN or only allow whitelisted IPs
 status : Open
 start: 2023-06-09
@@ -49,7 +49,7 @@ timeline:
 - start: 2023-06-09
   end:
   event: "Fortinet released security fixes"
-  - start: 2023-06-09
+- start: 2023-06-09
   end:
   event: "DIVD starts tracking this vulnerability"
 - start: 2023-07-13
@@ -58,10 +58,10 @@ timeline:
 - start: 2023-06-12
   end:
   event: "DIVD starts researching fingerprint"
-  - start: 2023-06-13
+- start: 2023-06-13
   end:
   event: DIVD identifies vulnerable devices"
-  - start: 2023-07-17
+- start: 2023-07-17
   end:
   event: "Fox-IT/NCC Group shares data of more vulnerable devices with DIVD"
 - start: 2023-07-17
@@ -70,21 +70,20 @@ timeline:
 ---
 
 ## Summary
-Following previous incident FG-IR-22-398 / CVE-2022-42475 published on January 11, 2023 (known by us as DIVD-2022-00063) where a heap-based buffer overflow in FortiOS SSL VPN with exploitation was observed in the wild, the Fortinet Product Security Incident Response Team (PSIRT) proactively initiated a code audit of the SSL-VPN module This audit, together with a responsible disclosure from a third-party researcher, led to the identification of this new critical SSL-VPN RCE Vulnerability.
-According to a blog posted by Bishop Fox there were on June 30, 2023 nearly 490,000 affected SSL VPN interfaces exposed on the internet and roughly 69% of them were around that time unpatched.
-
+Following previous incident FG-IR-22-398 / CVE-2022-42475 published on January 11, 2023 (known to us as DIVD-2022-00063) where a heap-based buffer overflow in FortiOS SSL VPN with exploitation was observed in the wild, the Fortinet Product Security Incident Response Team (PSIRT) proactively initiated a code audit of the SSL-VPN module. This audit, together with a responsible disclosure from a third-party researcher, led to the identification of this new critical SSL-VPN RCE Vulnerability.
+According to a blog, posted by BishopFox, there were nearly 490,000 affected SSL VPN interfaces exposed on the internet on June 30th of 2023. Roughly 69% of them were at that time unpatched.
 ## What you can do
-Upgrade your SSL VPN instance to the newest version or make us of the work-around: disable SSL VPN or only allow whitelisted IPs.
+Upgrade your SSL VPN instance to the latest version or apply the work-around: disable SSL VPN or only allow whitelisted IPs.
 
 ## What we are doing
-DIVD is currently scanning for vulnerable instances connected to the public Internet. Furthermore, we received new data from Fox-it /NCC Group that we will use. Owners of vulnerable systems will receive a notification with instructions to update their system.
+DIVD is currently scanning for vulnerable instances connected to the public internet. We would like to thank Fox-IT / NCC Group for the data on this vulnerability that we will use to notify owners of vulnerable systems. Owners of vulnerable systems will receive a notification with instructions to update their system.
 
 {% include timeline.html %}
 
 ## More information
-* {% cve CVE-2023-24489 %}
+* {% cve CVE-2023-27997 %}
 * [Fortinet Security Advisory](https://www.fortiguard.com/psirt/FG-IR-23-097)
-* [Fortinet PSIRT Blog CVE-2023-24489](https://www.fortinet.com/blog/psirt-blogs/analysis-of-cve-2023-27997-and-clarifications-on-volt-typhoon-campaign)
+* [Fortinet PSIRT Blog CVE-2023-27997](https://www.fortinet.com/blog/psirt-blogs/analysis-of-cve-2023-27997-and-clarifications-on-volt-typhoon-campaign)
 * [Fortinet PSIRT Blog 2022-42475 ](https://www.fortinet.com/blog/psirt-blogs/analysis-of-fg-ir-22-398-fortios-heap-based-buffer-overflow-in-sslvpnd)
 * [DIVD case CVE-2022-42475](https://csirt.divd.nl/csirt-divd-nl/cases/DIVD-2022-00063/)
 * [Bishop Fox Blog](https://bishopfox.com/blog/cve-2023-27997-exploitable-and-fortigate-firewalls-vulnerable)
