--- a/_cases/2023/DIVD-2023-00028.md
+++ b/_cases/2023/DIVD-2023-00028.md
@@ -35,6 +35,9 @@ timeline:
 - start: 2023-07-15
   end:
   event: "First version of this case file"
+- start: 2023-07-20
+  end:
+  event: Informed vulnerable parties
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 ---
