--- a/_cases/2023/DIVD-2023-00030.md
+++ b/_cases/2023/DIVD-2023-00030.md
@@ -40,7 +40,7 @@ timeline:
 
 Citrix has released a [security bulletin](https://support.citrix.com/article/CTX561482/citrix-adc-and-citrix-gateway-security-bulletin-for-cve20233519-cve20233466-cve20233467) notifying of three vulnerabilities in Citrix NetScaler ADC and NetScaler Gateway products. One of these vulnerabilities tracked as {% cve cve-2023-3519 %} is an unauthenticated remote code execution vulnerability. This would allow an attack to execute arbitrary commands on a vulnerable exposed Citrix NetScaler ADC or Gateway. This is a critical vulnerability, and Citrix urges recommends patching vulnerable systems.
 
-Building upon the earlier notifications of vulnearble Citrix systems, [Fox-IT / NCC Group](https://fox-it.com/) shared data of vulnerable systems that DIVD will notify. The scanning method is published in the following [blog post](https://blog.fox-it.com/2022/12/28/cve-2022-27510-cve-2022-27518-measuring-citrix-adc-gateway-version-adoption-on-the-internet/).
+Building upon the earlier notifications of vulnerable Citrix systems, [Fox-IT / NCC Group](https://fox-it.com/) shared data of vulnerable systems that DIVD will notify. The scanning method is published in the following [blog post](https://blog.fox-it.com/2022/12/28/cve-2022-27510-cve-2022-27518-measuring-citrix-adc-gateway-version-adoption-on-the-internet/).
 
 
 ### {% cve CVE-2023-3519 %} - Unauthenticated remote code execution
