--- a/_cases/2023/DIVD-2023-00030.md
+++ b/_cases/2023/DIVD-2023-00030.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: Citrix systems vulnerable for CVE-2023-3519
-excerpt: " DIVD is notifying owners of vulnerable Citrix ADC and Gateway systems, based on scanning data obtained from Fox-IT,"
+excerpt: " DIVD is notifying owners of vulnerable Citrix ADC and Gateway systems, based on scanning data obtained from Fox-IT."
 author: Ralph Horn
 lead: Ralph Horn
 researchers:
@@ -28,7 +28,7 @@ status : Open
 start: 2023-07-18
 end: 
 timeline:
-- start: 2022-07-08
+- start: 2023-07-08
   end:
   event: "Citrix releases a security bulletin for CVE-2023-3519, CVE-2023-3467 and CVE-2023-3466"
 - start: 2023-07-19
