--- a/_cases/2023/DIVD-2023-00023.md
+++ b/_cases/2023/DIVD-2023-00023.md
@@ -3,7 +3,7 @@ layout: case
 title: "SQL injection in MOVEit Transfer - CVE-2023-34362"
 author: Max van der Horst
 lead: Alwin Warringa
-status: Open
+status: Closed
 excerpt: "MOVEit Transfer has a critical SQL injection vulnerability that is actively exploited for data theft."
 researchers:
 - Wietse Boonstra
@@ -45,6 +45,13 @@ timeline:
 - start: 2023-06-15
   end:
   event: "New zero day vulnerability found and published online"
+- start: 2023-07-03
+  end:
+  event: "DIVD sent out a second and final round of notifications."
+- start: 2023-07-25
+  end:
+  event: "Case closed."
+ips: 192
 ---
 
 ## Summary
