--- a/_cases/2023/DIVD-2023-00023.md
+++ b/_cases/2023/DIVD-2023-00023.md
@@ -25,7 +25,7 @@ start: 2023-06-02
 end: 
 timeline:
 - start: 2023-06-02
-  end:
+  end: 2023-07-27
   event: "NCSC-NL publishes advisory."
 - start: 2023-06-02
   end:
