--- a/_cases/2023/DIVD-2023-00023.md
+++ b/_cases/2023/DIVD-2023-00023.md
@@ -22,7 +22,7 @@ versions:
 
 recommendation: "Apply firewall rules to block any HTTP traffic on ports 80 and 443 until patch installment, review and delete any unauthorized users and files, install the provided patch."
 start: 2023-06-02
-end: 
+end: 2023-07-27
 timeline:
 - start: 2023-06-02
   end: 2023-07-27
