Taking over during absence

--- a/_cases/2023/DIVD-2023-00030.md
+++ b/_cases/2023/DIVD-2023-00030.md
@@ -2,8 +2,8 @@
 layout: case
 title: Citrix systems vulnerable for CVE-2023-3519
 excerpt: " DIVD is notifying owners of vulnerable Citrix ADC and Gateway systems, based on scanning data obtained from Fox-IT."
-author: Ralph Horn
-lead: Ralph Horn
+author: Lennaert Oudshoorn
+lead: Lennaert Oudshoorn
 researchers:
 - Yun Hu (Fox-IT)
 - Max Groot
