--- a/_cases/2023/DIVD-2023-00031.md
+++ b/_cases/2023/DIVD-2023-00031.md
@@ -2,8 +2,8 @@
 layout: case
 title: Ivanti MobileIron vulnerable for CVE-2023-35078
 excerpt: "DIVD is notifying owners of vulnerable Ivanti MobileIron"
-author: Ralph Horn
-lead: Ralph Horn
+author: Lennaert Oudshoorn
+lead: Lennaert Oudshoorn
 researchers:
 - Alwin Warringa
 cves:
