--- a/_cases/2023/DIVD-2023-00009.md
+++ b/_cases/2023/DIVD-2023-00009.md
@@ -35,6 +35,10 @@ timeline:
 - start: 2023-05-02
   end:
   event: "DIVD conducts a second scan for this vulnerability"
+- start: 2023-09-04
+  end:
+  event: "Case closed."
+ips:100
 ---
 
 ## Summary
