--- a/_cases/2023/DIVD-2023-00009.md
+++ b/_cases/2023/DIVD-2023-00009.md
@@ -3,7 +3,7 @@ layout: case
 title: "Cisco RV Series Remote Command Execution"
 author: Max van der Horst
 lead: Max van der Horst
-status: Open
+status: Closed
 excerpt: "Cisco RV340, RV340W, RV345 and RV345P contain a Remote Command Execution vulnerability. "
 researchers:
 - Lennaert Oudshoorn
