--- a/_cases/2023/DIVD-2023-00009.md
+++ b/_cases/2023/DIVD-2023-00009.md
@@ -18,7 +18,7 @@ versions:
 
 recommendation: "Upgrade the firmware of your RV Small Business Router to the latest version (larger than 1.0.03.28)."
 start: 2023-02-07
-end:
+end: 2023-08-04
 timeline:
 - start: 2023-02-07
   end:
@@ -35,10 +35,10 @@ timeline:
 - start: 2023-05-02
   end:
   event: "DIVD conducts a second scan for this vulnerability"
-- start: 2023-09-04
+- start: 2023-08-04
   end:
   event: "Case closed."
-ips:100
+ips: 100
 ---
 
 ## Summary
