--- a/_cases/2023/DIVD-2023-00032.md
+++ b/_cases/2023/DIVD-2023-00032.md
@@ -4,7 +4,7 @@ title: "Access Control Bypass - CVE-2023-29298 & CVE-2023-38205"
 author: Finn van der Knaap
 lead: Finn van der Knaap
 status: Open
-excerpt: "Multiple vulnerabilities recently came out about Adobe Coldfusion with the latest being an Access Control Bypass. This vulnerability combined with another vulnerability that was actively exploited leads to an RCE"
+excerpt: "Both vulnerabilities allow an attacker to bypass the product feature that restricts external access to the ColdFusion Administrator."
 researchers:
 - Finn van der Knaap
 cves:
