Add '(Fox-IT)' suffix to Max Groot

--- a/_cases/2023/DIVD-2023-00030.md
+++ b/_cases/2023/DIVD-2023-00030.md
@@ -6,7 +6,7 @@ author: Lennaert Oudshoorn
 lead: Lennaert Oudshoorn
 researchers:
 - Yun Hu (Fox-IT)
-- Max Groot
+- Max Groot (Fox-IT)
 cves:
 - CVE-2023-3519
 - CVE-2023-3467
