--- a/_cases/2023/DIVD-2023-00025.md
+++ b/_cases/2023/DIVD-2023-00025.md
@@ -8,6 +8,7 @@ excerpt: "Danfoss AK-SM800A has multiple web-related vulnerabilities. It is advi
 researchers:
 - Jony Schats (HackDefense)
 - Stan Plasmeijer (HackDefense)
+- Synacktiv
 - Max van der Horst
 cves:
 - CVE-2023-25913
